# laskugeneraattori

./: .devcontainer.json  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  flake.nix
.github/: CODEOWNERS
.github/workflows/: build.yml  rust.yml
migrations/2024-01-22-103957_init/: down.sql  up.sql
migrations/2024-03-14-222214_init/: down.sql  up.sql
migrations/2024-05-31-143014_add_invoice_fields/: down.sql  up.sql
migrations/2024-06-01-090405_attachment_description/: down.sql  up.sql
src/: error.rs  main.rs  merge.rs  models.rs  schema.rs  state.rs
src/api/: invoices.rs  mod.rs  pdf.rs
src/database/: invoices.rs  mod.rs
src/mailgun/: invoices.rs  mod.rs
src/pdfgen/: mod.rs
src/tests/: invoices.rs  mod.rs
templates/: invoice.typ
