[package]
name = "laskugeneraattori"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

[profile.release]
lto = true

[features]
default = ["pdfgen"]
pdfgen = [
    "dep:typst",
    "dep:typst-pdf",
    "dep:comemo",
    "dep:time",
    "dep:typst-assets",
    "dep:tempdir",
]
system_fonts = ["dep:fontdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-valid = { version = "0.14.0", features = [
    "basic",
    "garde",
    "typed_multipart",
], default-features = false }
axum_typed_multipart = "0.11.0"
bb8 = "0.8.1"
chrono = { version = "0.4.31", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
hex = "0.4.3"
serde = "1.0.195"
serde_derive = "1.0.195"
sha2 = "0.10.8"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.111"
futures = "0.3.30"
garde = "0.17.0"
typst = { version = "0.11.1", optional = true }
typst-pdf = { version = "0.11.1", optional = true }
comemo = { version = "0.4.0", optional = true }
time = { version = "0.3.36", optional = true }
fontdb = { version = "0.17.0", optional = true }
typst-assets = { version = "0.11.1", features = ["fonts"], optional = true }
tempdir = { version = "0.3.7", optional = true }
tokio-rayon = "2.1.0"
reqwest = { version = "0.12.5", features = ["multipart"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
axum-test = "14.2.2"
