[package]
name = "laskugeneraattori"
version = "0.1.0"
edition = "2021"
authors = ["Luukas Pörtfors <lajp@iki.fi>"]

[profile.release]
lto = true

[features]
system_fonts = ["dep:fontdb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "multipart"] }
axum-valid = { version = "0.14.0", features = [
    "basic",
    "full_garde",
    "typed_multipart",
], default-features = false }
axum_typed_multipart = "0.11.0"
clap = { version = "4.5.16", features = ["env", "derive"] }
comemo = { version = "0.4.0" }
dotenv = "0.15.0"
fontdb = { version = "0.17.0", optional = true }
futures = "0.3.30"
garde = "0.17.0"
iban_validate = "4.0.1"
lopdf = "0.33.0"
regex = "1.10.6"
reqwest = { version = "0.12.5", default-features = false, features = ["multipart", "rustls-tls"] }
serde = "1.0.195"
serde_derive = "1.0.195"
serde_json = "1.0.111"
thiserror = "1.0.56"
time = { version = "0.3.36" }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.1", features = ["trace", "limit", "cors"] }
tower_governor = { version = "0.4.2", features = ["axum"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
typst = { version = "0.11.1" }
typst-assets = { version = "0.11.1", features = ["fonts"] }
typst-pdf = { version = "0.11.1" }

[dev-dependencies]
axum-test = "14.2.2"
tower = { version = "0.4.13", features = ["util"] }
